source/uniandes/lym/robot/control/Robot.java
/* Robot.java */
/* Generated By:JavaCC: Do not edit this line. Robot.java */
package uniandes.lym.robot.control;

import uniandes.lym.robot.kernel.*;
import uniandes.lym.robot.view.Console;

import java.awt.Point;
import java.io.*;
import java.util.Vector;
import java.util.LinkedList;
import java.util.HashMap;
import java.util.Map;

@SuppressWarnings("serial")
public class Robot implements RobotConstants {


        private RobotWorldDec world;
        private static boolean condicion=true;
        private static boolean cambio=false;
        private static Map<String,Integer > variables = new HashMap<String,Integer >();
        void setWorld(RobotWorld w) {
                world = (RobotWorldDec) w;
        }

        String salida=new String();

  final public void inicial() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EXEC:{
      exec();
      break;
      }
    case NEW:{
      jj_consume_token(NEW);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VAR:{
        var();
        break;
        }
      case MACRO:{
        macro();
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void exec() throws ParseException {
    jj_consume_token(EXEC);
    bloque();
}

  final public void var() throws ParseException {String nombreVariable = "";
int numero;
    jj_consume_token(VAR);
    jj_consume_token(ELEMENTO);
try {
      nombreVariable = token.image;
    }
    catch(Exception e) {
    }
    jj_consume_token(59);
try { numero=valor(); variables.put(nombreVariable,numero); }
    catch (Exception e) { }
}

  final public int obtenerVar() throws ParseException {String nombreVariable = ""; int valorVariable;
    jj_consume_token(ELEMENTO);
try {
      nombreVariable = token.image;
      if (variables.containsKey(nombreVariable)) {
        valorVariable = variables.get(nombreVariable);
        {if ("" != null) return valorVariable;}
      } else {
        System.out.println("Variable " + nombreVariable + " no esta definida.");
      }
    }
    catch(Exception e) { }
    throw new Error("Missing return statement in function");
}

  final public void macro() throws ParseException {
    jj_consume_token(MACRO);
}

  final public void bloque() throws ParseException {
    jj_consume_token(60);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TURNTOMY:
      case TURNTOTHE:
      case WALK:
      case JUMP:
      case DROP:
      case PICK:
      case GRAB:
      case LETGO:
      case POP:
      case MOVES:
      case NOP:
      case SAFEEXE:
      case IF:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_1;
      }
      comando();
    }
    jj_consume_token(61);
}

  final public void comando() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case WALK:{
      walk();
      break;
      }
    case JUMP:{
      jump();
      break;
      }
    case DROP:{
      drop();
      break;
      }
    case PICK:{
      pick();
      break;
      }
    case GRAB:{
      grab();
      break;
      }
    case LETGO:{
      letgo();
      break;
      }
    case POP:{
      pop();
      break;
      }
    case TURNTOMY:{
      turntomy();
      break;
      }
    case TURNTOTHE:{
      turntothe();
      break;
      }
    case MOVES:{
      moves();
      break;
      }
    case IF:{
      condicional();
      break;
      }
    case NOP:{
      nop();
      break;
      }
    case SAFEEXE:{
      safeexe();
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void turntomy() throws ParseException {
    jj_consume_token(TURNTOMY);
    jj_consume_token(62);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case RIGHT:{
      jj_consume_token(RIGHT);
if (condicion==true && cambio==false || condicion==true && cambio==true) { if (world.facingNorth())
                                          { world.turnRight(); }
                                          else if (world.facingWest())
                                          { world.turnRight(); world.turnRight(); }
                                          else if (world.facingSouth())
                                          { world.turnRight(); world.turnRight(); world.turnRight(); }
                                         }
      break;
      }
    case LEFT:{
      jj_consume_token(LEFT);
if (condicion==true && cambio==false || condicion==true && cambio==true) { if (world.facingNorth())
                                  { world.turnRight(); world.turnRight(); world.turnRight(); }
                                  else if (world.facingEast())
                                  { world.turnRight(); world.turnRight(); }
                                  else if (world.facingSouth())
                                  { world.turnRight(); }
                                }
      break;
      }
    case BACK:{
      jj_consume_token(BACK);
if (condicion==true && cambio==false || condicion==true && cambio==true) { if (world.facingNorth())
                                { world.turnRight(); world.turnRight();  }
                                else if (world.facingEast())
                                { world.turnRight(); }
                                else if (world.facingWest())
                                { world.turnRight(); world.turnRight(); world.turnRight();  }
                    }
      break;
      }
    case FRONT:{
      jj_consume_token(FRONT);
if (condicion==true && cambio==false || condicion==true && cambio==true) { if (world.facingEast())
                                {world.turnRight(); world.turnRight(); world.turnRight(); }
                                else if (world.facingSouth())
                                {world.turnRight(); world.turnRight(); }
                                else if (world.facingWest())
                                { world.turnRight();}
             }
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(63);
    jj_consume_token(64);
}

  final public void turntothe() throws ParseException {
    jj_consume_token(TURNTOTHE);
    jj_consume_token(62);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NORTH:{
      jj_consume_token(NORTH);
if (world.facingWest())
                        { world.turnRight(); }
                        else if (world.facingSouth())
                        { world.turnRight(); world.turnRight();  }
                        else if (world.facingEast())
                        {world.turnRight(); world.turnRight(); world.turnRight(); }
      break;
      }
    case SOUTH:{
      jj_consume_token(SOUTH);
if (world.facingNorth())
                                {world.turnRight(); world.turnRight(); }
                        else if (world.facingEast())
                                { world.turnRight();}
                        else if (world.facingWest())
                                { world.turnRight();world.turnRight();world.turnRight();}
      break;
      }
    case EAST:{
      jj_consume_token(EAST);
if (world.facingNorth())
                                {world.turnRight(); }
                        else if (world.facingWest())
                                {world.turnRight();world.turnRight(); }
                        else if (world.facingSouth())
                                {world.turnRight();world.turnRight();world.turnRight(); }
      break;
      }
    case WEST:{
      jj_consume_token(WEST);
if (world.facingNorth())
                        { world.turnRight();world.turnRight();world.turnRight();}
                        else if (world.facingEast())
                        {world.turnRight();world.turnRight();}
                        else if (world.facingSouth())
                        {world.turnRight();}
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(63);
    jj_consume_token(64);
}

  final public int valor() throws ParseException {int numero= 0;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VALOR:
    case SIZE:
    case MYX:
    case MYY:
    case MYCHIPS:
    case MYBALLOONS:
    case BALLOONSHERE:
    case CHIPSHERE:
    case ROOMFORCHIPS:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VALOR:{
        jj_consume_token(VALOR);
numero = Integer.parseInt(token.image); {if ("" != null) return numero;}
        break;
        }
      case SIZE:{
        jj_consume_token(SIZE);
numero = world.getN(); {if ("" != null) return numero;}
        break;
        }
      case MYX:{
        jj_consume_token(MYX);
numero = (int) world.getPosition().getX(); {if ("" != null) return numero;}
        break;
        }
      case MYY:{
        jj_consume_token(MYY);
numero = (int) world.getPosition().getY(); {if ("" != null) return numero;}
        break;
        }
      case MYCHIPS:{
        jj_consume_token(MYCHIPS);
numero = world.getMyChips(); {if ("" != null) return numero;}
        break;
        }
      case MYBALLOONS:{
        jj_consume_token(MYBALLOONS);
numero = world.getMyBalloons(); {if ("" != null) return numero;}
        break;
        }
      case BALLOONSHERE:{
        jj_consume_token(BALLOONSHERE);
numero = world.countBalloons(); {if ("" != null) return numero;}
        break;
        }
      case CHIPSHERE:{
        jj_consume_token(CHIPSHERE);
numero = world.chipsToPick(); {if ("" != null) return numero;}
        break;
        }
      case ROOMFORCHIPS:{
        jj_consume_token(ROOMFORCHIPS);
numero = world.freeSpacesForChips(); {if ("" != null) return numero;}
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[7] = jj_gen;
System.out.println("hola");numero=obtenerVar(); {if ("" != null) return numero;}
    }
    throw new Error("Missing return statement in function");
}

  final public void nop() throws ParseException {
    jj_consume_token(NOP);
    jj_consume_token(64);
}

  final public void moves() throws ParseException {int perspectiva= world.getFacing();
    jj_consume_token(MOVES);
    jj_consume_token(62);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FORWARD:{
      jj_consume_token(FORWARD);
if (condicion==true && cambio==false || condicion==true && cambio==true) { if (world.facingNorth())
                                                                 {world.up(); }
                                                                 else if (world.facingEast())
                                                                 {world.right(); }
                                                                 else if (world.facingSouth())
                                                                 {world.down(); }
                                                                 else if (world.facingWest())
                                                                 {world.left(); }
                                                                }
      break;
      }
    case RIGHT:{
      jj_consume_token(RIGHT);
if (condicion==true && cambio==false || condicion==true && cambio==true) {  if (world.facingNorth())
                                  {world.right(); }
                                  else if (world.facingEast())
                                  {world.down(); }
                                  else if (world.facingSouth())
                                  {world.left(); }
                                  else if (world.facingWest())
                                  {world.up(); }
                                }
      break;
      }
    case LEFT:{
      jj_consume_token(LEFT);
if (condicion==true && cambio==false || condicion==true && cambio==true) { if (world.facingNorth())
                                  {world.left(); }
                                  else if (world.facingEast())
                                  {world.up(); }
                                  else if (world.facingSouth())
                                  {world.right(); }
                                  else if (world.facingWest())
                                  {world.down(); }
                                }
      break;
      }
    case BACK:{
      jj_consume_token(BACK);
if (condicion==true && cambio==false || condicion==true && cambio==true) {
                                  if (world.facingNorth())
                                  {world.down(); }
                                  else if (world.facingEast())
                                  {world.left(); }
                                  else if (world.facingSouth())
                                  {world.up(); }
                                  else if (world.facingWest())
                                  {world.right(); }
                                }
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 65:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_2;
      }
      jj_consume_token(65);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FORWARD:{
        jj_consume_token(FORWARD);
if (condicion==true && cambio==false || condicion==true && cambio==true) { if (world.facingNorth())
                                                                 {world.up(); }
                                                                 else if (world.facingEast())
                                                                 {world.right(); }
                                                                 else if (world.facingSouth())
                                                                 {world.down(); }
                                                                 else if (world.facingWest())
                                                                 {world.left(); }
                                                                }
        break;
        }
      case RIGHT:{
        jj_consume_token(RIGHT);
if (condicion==true && cambio==false || condicion==true && cambio==true) { if (world.facingNorth())
                                  {world.right(); }
                                  else if (world.facingEast())
                                  {world.down(); }
                                  else if (world.facingSouth())
                                  {world.left(); }
                                  else if (world.facingWest())
                                  {world.up(); }
                                }
        break;
        }
      case LEFT:{
        jj_consume_token(LEFT);
if (condicion==true && cambio==false || condicion==true && cambio==true) { if (world.facingNorth())
                                  {world.left(); }
                                  else if (world.facingEast())
                                  {world.up(); }
                                  else if (world.facingSouth())
                                  {world.right(); }
                                  else if (world.facingWest())
                                  {world.down(); }
                                }
        break;
        }
      case BACK:{
        jj_consume_token(BACK);
if (condicion==true && cambio==false || condicion==true && cambio==true) { if (world.facingNorth())
                                  {world.down(); }
                                  else if (world.facingEast())
                                  {world.left(); }
                                  else if (world.facingSouth())
                                  {world.up(); }
                                  else if (world.facingWest())
                                  {world.right(); }
                                }
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(63);
    jj_consume_token(64);
}

  final public boolean isblocked() throws ParseException {Point pos = world.getPosition();
 pos.clone();
    jj_consume_token(ISBLOCKED);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 62:{
      jj_consume_token(62);
      jj_consume_token(LEFT);
pos.move((int)pos.getX()-1, (int)pos.getY());
  System.out.println("si");
                                                                {if ("" != null) return world.isBlocked(pos);}
      break;
      }
    case RIGHT:{
      jj_consume_token(RIGHT);
pos.move((int)pos.getX()+1, (int)pos.getY());
                                                                {if ("" != null) return world.isBlocked(pos);}
      break;
      }
    case FRONT:{
      jj_consume_token(FRONT);
pos.move((int)pos.getX(), (int)pos.getY()+1);
                                                                {if ("" != null) return world.isBlocked(pos);}
      break;
      }
    case BACK:{
      jj_consume_token(BACK);
pos.move((int)pos.getX(), (int)pos.getY()-1);
                                                                {if ("" != null) return world.isBlocked(pos);}
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(63);
    throw new Error("Missing return statement in function");
}

  final public boolean isfacing() throws ParseException {boolean resp =false;
    jj_consume_token(ISFACING);
    jj_consume_token(62);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NORTH:{
      jj_consume_token(NORTH);
resp= world.facingNorth();
      break;
      }
    case SOUTH:{
      jj_consume_token(SOUTH);
resp = world.facingSouth();
      break;
      }
    case EAST:{
      jj_consume_token(EAST);
resp = world.facingEast();
      break;
      }
    case WEST:{
      jj_consume_token(WEST);
resp = world.facingWest();
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(63);
{if ("" != null) return resp;}
    throw new Error("Missing return statement in function");
}

  final public boolean zero() throws ParseException {
    jj_consume_token(ZERO);
    jj_consume_token(62);
{if ("" != null) return valor()==0;}
    jj_consume_token(63);
    throw new Error("Missing return statement in function");
}

  final public void safeexecution() throws ParseException {
try { walk(); }
                                catch (Error e) {
                                        System.out.println("Error en walk, no se ejecut\u00f3");
                                }
}

  final public void safeexe() throws ParseException {
    jj_consume_token(SAFEEXE);
    jj_consume_token(62);
    safeexecution();
    jj_consume_token(63);
    jj_consume_token(64);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 63:{
      jj_consume_token(63);
      jj_consume_token(64);
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      ;
    }
}
